--- a/src/dev.ipynb
+++ b/src/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,54 @@
     "import torch.nn.functional as F\n",
     "from tqdm import tqdm\n",
     "from transformers import AutoTokenizer, AutoModel\n",
-    "from utils.manager import Manager"
+    "from utils.manager import Manager\n",
+    "from utils.util import BM25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2022-02-16 08:17:45,606] INFO (BM25) Fitting BM25...\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm25 = BM25()\n",
+    "documents = [\"I love you\", \"shit my love oh I hate you\", \"shit!\"]\n",
+    "bm25.fit(documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2022-02-16 08:17:57,764] INFO (BM25) computing BM25 scores...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'my oh hate shit love you'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bm25(\"shit my love oh I hate you\")"
    ]
   },
   {
