--- a/src/dev.ipynb
+++ b/src/dev.ipynb
@@ -27,6 +27,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2it [00:00, 766.29it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[('father', 0.6821)],\n",
+       " [('misleading', 0.3678), ('rethinking', 0.4842), ('patterns', 0.6155)]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keybert import KeyBERT\n",
+    "model = KeyBERT()\n",
+    "\n",
+    "sent = [\"i am your father\", \"misleading rethinking patterns\"]\n",
+    "model.extract_keywords(sent, keyphrase_ngram_range=(1, 1), stop_words='english', top_n=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "[2022-02-16 08:17:45,606] INFO (BM25) Fitting BM25...\n"
      ]
     }
@@ -289,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.10"
   },
   "orig_nbformat": 4
  },
